src/objects/Registrant_Setup_Request__c.object
<CustomObject>
    <description>Staging Object to store registrants that require approval from MOHCD team.</description>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Zipcode__c</fullName>
        <label>Current Zipcode</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Possible_Contact_or_User_1__c</fullName>
        <inlineHelpText>If the reason for the User registration setup request has been staged due to contacts found, this is the 1st found contact candidate.  If the only found candidate, the attempted registration was likely made by someone claiming to be new to MOHCD.</inlineHelpText>
        <label>Link to Possible Contact or User 1</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Link_to_Possible_Contact_or_User_2__c</fullName>
        <inlineHelpText>If the reason for the User registration setup request has been staged due to contacts found, this is the 2nd found contact candidate.  If a value exists, it means the registration request indicated prior program participation, but 2+ contacts were found.</inlineHelpText>
        <label>Link to Possible Contact or User 2</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>NewtoProgram__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NewtoProgram</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Nickname__c</fullName>
        <label>Nickname</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Code__c</fullName>
        <label>Registration Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submitted</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Resolved</fullName>
                </value>
                <value>
                    <fullName>Declined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Registrant Setup Request</label>
    <listViews>
        <fullName>Today_s_Registration_Requests</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>First_Name__c</columns>
        <columns>Last_Name__c</columns>
        <columns>Reason__c</columns>
        <columns>Link_to_Possible_Contact_or_User_1__c</columns>
        <columns>Link_to_Possible_Contact_or_User_2__c</columns>
        <columns>NewtoProgram__c</columns>
        <columns>Birthdate__c</columns>
        <columns>Current_Zipcode__c</columns>
        <columns>Registration_Code__c</columns>
        <columns>Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submitted,In Progress</value>
        </filters>
        <label>Today&apos;s Registration Requests</label>
    </listViews>
    <nameField>
        <displayFormat>RSR-{000000}</displayFormat>
        <label>Registrant Setup Request #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Registrant Setup Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>